<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_orange_dark"/>

    <TextView android:id="@+id/lblResultDesc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton android:id="@+id/btShowResult"
            android:contentDescription="@string/lblResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#00000000"
            app:srcCompat="@drawable/ic_graph"/>

        <ImageButton android:id="@+id/btShareResult"
            android:contentDescription="@string/lblShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#00000000"
            app:srcCompat="@drawable/ic_share"/>

        <ImageButton android:id="@+id/btDeleteResult"
            android:contentDescription="@string/lblDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#00000000"
            app:srcCompat="@drawable/ic_delete"/>
    </LinearLayout>

</LinearLayout>
