<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.showresult.ResultViewerActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton         android:id="@+id/btGraphic"
            app:srcCompat="@drawable/ic_graph"
            app:backgroundTint="#00000000"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/lblChart"/>

        <ImageButton         android:id="@+id/btData"
            app:srcCompat="@drawable/ic_report"
            app:backgroundTint="#00000000"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/lblReport" />

        <ImageButton  android:id="@+id/btZoom"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:backgroundTint="#00000000"
            android:contentDescription="@string/lblZoomIn"
            app:srcCompat="@drawable/ic_zoom_in"/>

    </LinearLayout>

    <ScrollView
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView  android:id="@+id/ivChartViewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:contentDescription="@string/lblResult" />

            <TextView   android:id="@+id/lblTextData"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

        </FrameLayout>
    </ScrollView>
</LinearLayout>
