<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5">

        <ImageView      android:id="@+id/btRecord"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_stopwatch"
            android:contentDescription="@string/lblRecord"
            android:layout_marginTop="100dp" />

        <TextView       android:id="@+id/lblRecord"
            android:text="@string/lblRecord"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:textSize="48sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_weight=".5">

        <ImageView
            android:id="@+id/btResults"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/lblChart"
            app:srcCompat="@drawable/ic_graph" />

        <TextView       android:id="@+id/lblResults"
            android:text="@string/lblResults"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:textSize="48sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
