<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".view.experiment.TestHRDevice"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/lblDevice"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight=".3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView android:id="@+id/lblBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="60sp"
            android:text="--"/>

        <TextView android:id="@+id/lblBpmTag"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/lblBpm"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight=".3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView android:id="@+id/lblRR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:text="--"/>

        <TextView android:id="@+id/lblRRTag"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/lblRR"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight=".2"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="bottom|center_horizontal">

        <include layout="@layout/content_hr_rr_support" />

        <TextView android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="40sp"
            android:text="__:__"/>

    </LinearLayout>
</LinearLayout>
